# stack

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  driver_dyn.c  driver_pool.c
include/: stack_dyn.h  stack_errors.h  stack_pool.h
src/: stack_dyn.c  stack_errors.c  stack_pool.c
tests/: CMakeLists.txt  stack_dyn_test.c  stack_pool_test.c  test.h  test_main.c
